[package]
name = "qmt-codex"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "wasm"

[features]
default = ["extism"]
api = ["querymt"]
native = ["querymt"]
extism = ["extism-pdk", "querymt", "querymt-extism-macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../../querymt", default-features = false, optional = true }
querymt-extism-macros = { path = "../../querymt-extism-macros", optional = true }
serde.workspace = true
serde_json.workspace = true
http.workspace = true
url.workspace = true
schemars.workspace = true
base64.workspace = true
heck.workspace = true
extism-pdk = { workspace = true, optional = true }
