[package]
name = "qmt-izwi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "native"

[features]
default = ["native"]
native = ["querymt", "querymt/tracing"]
cuda = ["izwi-core/cuda"]
metal = ["izwi-core/metal"]
accelerate = ["izwi-core/accelerate"]
flash-attn = ["cuda", "izwi-core/flash-attn"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
izwi-core = { git = "https://github.com/agentem-ai/izwi", tag = "v0.1.0-beta-2", package = "izwi-core" }
querymt = { path = "../../querymt", default-features = false, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "sync"] }
