[package]
name = "qmt-kimi-code"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "wasm"

[features]
default = ["extism"]
native = ["querymt", "querymt/tracing"]
extism = ["extism-pdk", "querymt", "querymt-extism-macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../../querymt", default-features = false, optional = true }
querymt-extism-macros = { path = "../../querymt-extism-macros", optional = true }
qmt-openai = { path = "../openai", default-features = false, features = ["api"] }
kimi-auth = { git = "https://github.com/querymt/kimi-auth", tag = "v0.1.0", default-features = false}
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
http = { workspace = true }
extism-pdk = { workspace = true, optional = true }
