[package]
name = "qmt-llama-cpp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "native"

[features]
default = ["native"]
native = ["querymt", "querymt/tracing", "llama-cpp-2/openmp"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
openmp = ["llama-cpp-2/openmp"]
vulkan = ["llama-cpp-2/vulkan"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
encoding_rs = "0.8"
futures.workspace = true
hf-hub.workspace = true
llama-cpp-2 = { version = "0.1", default-features = false }
log.workspace = true
querymt = { path = "../../querymt", default-features = false, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt"] }
