[package]
name = "qmt-llama-cpp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "native"

[features]
default = ["native"]
native = ["querymt", "querymt/tracing", "llama-cpp-2/openmp"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
openmp = ["llama-cpp-2/openmp"]
vulkan = ["llama-cpp-2/vulkan"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
encoding_rs = "0.8"
futures.workspace = true
infer = { version = "0.19", default-features = false }
llama-cpp-2 = { version = "0.1", default-features = false, features = ["mtmd"]}
querymt-provider-common = { path = "../../provider-common" }
log.workspace = true
querymt = { path = "../../querymt", default-features = false, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
