[package]
name = "qmt-mrs"
version = "0.1.0"
edition = "2021"

[package.metadata.qmt]
type = "native"

[features]
default = ["native"]
native = ["querymt"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../../querymt", default-features = false, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.6.0", features = ["metal"]}
async-trait = { workspace = true }
tokio = { version = "1", features = ["full"] }
