[package]
name = "qmt-mrs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "native"

[features]
default = ["native"]
native = ["querymt", "querymt/tracing"]
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
nccl = ["mistralrs/nccl"]
ring = ["mistralrs/ring"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../../querymt", default-features = false, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
async-trait = { workspace = true }
tokio = { version = "1", features = ["full"] }
image = "0.25"
hf-hub = { version = "0.4", default-features = false, features = [ "rustls-tls", "tokio", "ureq"] }
