[package]
name = "qmt-openrouter"
version = "0.1.0"
edition = "2021"

[features]
default = ["extism"]
native = ["querymt"]
extism = ["extism-pdk", "querymt", "querymt/extism_plugin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../../querymt", default-features = false, optional = true }
qmt-openai = { path = "../openai", default-features = false, features = ["api"] }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
extism-pdk = { workspace = true, optional = true }
