[package]
name = "qmt-proxy"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[package.metadata.qmt]
type = "wasm"

[features]
default = ["extism"]
api = ["querymt"]
native = ["querymt"]
extism = ["extism-pdk", "querymt", "querymt-extism-macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
querymt = { path = "../../querymt", default-features = false, optional = true }
querymt-extism-macros = { path = "../../querymt-extism-macros", optional = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
http.workspace = true
url.workspace = true
extism-pdk = { workspace = true, optional = true }
